[package]
name = "dictomatic"
version = "0.1.0"
authors = ["Caleb Hattingh <caleb.hattingh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
fileinput = "0.3.0"
