[package]
name = "dictomatic"
version = "0.1.1"
authors = ["Caleb Hattingh <caleb.hattingh@gmail.com>"]
edition = "2018"
description = "Static, offline, command-line CLI English dictionary"
license = "AGPL-3.0-or-later"
repository = "https://github.com/cjrh/dictomatic"
homepage = "https://github.com/cjrh/dictomatic"
readme = "README.md"
# Distributed as prebuilt binaries via GitHub Releases, not crates.io. This
# also keeps `cargo release` from attempting a publish (the embedded data files
# would exceed the crates.io size limit anyway).
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Let `cargo binstall --git <repo>` download the prebuilt release binary instead
# of compiling. The Release workflow uploads each binary as a bare file whose
# name carries the Rust target triple, e.g.
#   dictomatic-x86_64-unknown-linux-musl       (Linux)
#   dictomatic-x86_64-pc-windows-msvc.exe      (Windows)
# under the `vX.Y.Z` tag. `{ target }` expands to the user's host triple;
# cargo-binstall falls back from `-gnu` to the static `-musl` build, so a normal
# glibc Linux user still resolves the musl binary above.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ binary-ext }"
pkg-fmt = "bin"

[dependencies]
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
fileinput = "0.3.0"
